--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>FruitCard Odyssey</title>
     <link rel="stylesheet" href="Quiz.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0BT0S586R"></script>
+    <script async src=""></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -18,17 +18,11 @@
 <body>
     <div class="wrapper-main">
         <div id="home" class="flex-center flex-column">
-        <header>
-            <img src="Banner.svg" style="max-width: 100%;">
         </header>
         <h3>
-            Discover your true flavor!
-        </h3>
-        <h4>
-            A fruit personality quiz inspired by cosmos persona, what cake R U?, and the MBTI personality types.
-        </h4>
+            Discover what volunteering opportunity suits you!
         <p>
-            <img src="Thumbnail.gif" style="max-width: 100%;">
+            <img src="front page.png" style="max-width: 100%;">
         </p>
         <div class="begin-quiz-container">
             <button id="begin-quiz">Begin Quiz</button>
