--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>  
             <div class="button-container">
                 <button class="share-button">Share Quiz!</button>
-                <button id="back-to-home">Back to Home</button>
+                <button id="back-to-home">Find opportunities!</button>
             </div>
             <footer>
                 
